Fase Inicio: ediciones pequeñas en el código

--- a/Proyecto.Web/Views/Shared/_Layout.cshtml
+++ b/Proyecto.Web/Views/Shared/_Layout.cshtml
@@ -70,8 +70,8 @@
                     </h2>
 
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 m-3">
-                        <li><a href="#" class="nav-link px-2 link-secondary text-white">Overview</a></li>
-                        <li><a href="#" class="nav-link px-2 link-body-emphasis text-white">Inventory</a></li>
+                        <li><a href="#" class="nav-link px-2 link-secondary text-white">Dashboard</a></li>
+                        <li><a href="#" class="nav-link px-2 link-body-emphasis text-white">Gestión de Flotas</a></li>
                         <li><a href="#" class="nav-link px-2 link-body-emphasis text-white">Customers</a></li>
                         <li><a href="#" class="nav-link px-2 link-body-emphasis text-white">Products</a></li>
                     </ul>
