--- a/Proyecto.Web/Areas/Cliente/Views/Home/Index.cshtml
+++ b/Proyecto.Web/Areas/Cliente/Views/Home/Index.cshtml
@@ -1,48 +1,9 @@
 ﻿<div class="container">
     <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-12 mt-0 mb-5">
-            <div class="h-100 p-5 text-bg-dark rounded-3">
-                <h2>Welcome back, Anonymous!</h2>
-                <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
-                <button class="btn btn-outline-light" type="button">Visit Profile</button>
-            </div>
-        </div>
-
-        <div class="col-lg-6 col-md-6 col-sm-12 mt-0 mb-5">
-            <h3>Alertas</h3>
-            <div class="list-group">
-                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
-                    <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
-                    <div class="d-flex gap-2 w-100 justify-content-between">
-                        <div>
-                            <h6 class="mb-0">List group item heading</h6>
-                            <p class="mb-0 opacity-75">Some placeholder content in a paragraph.</p>
-                        </div>
-                        <small class="opacity-50 text-nowrap">now</small>
-                    </div>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
-                    <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
-                    <div class="d-flex gap-2 w-100 justify-content-between">
-                        <div>
-                            <h6 class="mb-0">Another title here</h6>
-                            <p class="mb-0 opacity-75">Some placeholder content in a paragraph that goes a little longer so it wraps to a new line.</p>
-                        </div>
-                        <small class="opacity-50 text-nowrap">3d</small>
-                    </div>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
-                    <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
-                    <div class="d-flex gap-2 w-100 justify-content-between">
-                        <div>
-                            <h6 class="mb-0">Third heading</h6>
-                            <p class="mb-0 opacity-75">Some placeholder content in a paragraph.</p>
-                        </div>
-                        <small class="opacity-50 text-nowrap">1w</small>
-                    </div>
-                </a>
-            </div>
-        </div>
+        @{
+            await Html.RenderPartialAsync("_welcomeDiv");
+            await Html.RenderPartialAsync("_alertasDiv");
+        }
     </div>
 </div>
 
