--- a/Proyecto.Web/Areas/Activos/Views/ActivoCategoria/Crear.cshtml
+++ b/Proyecto.Web/Areas/Activos/Views/ActivoCategoria/Crear.cshtml
@@ -1,1 +1,31 @@
-﻿
+﻿@model CategoriaActivosDTO
+
+<h1 class="text-center">Crear categorías de activos</h1>
+
+@using (Html.BeginForm("Crear", "ActivoCategoria", FormMethod.Post, new {@class = "container"}))
+{
+	
+		<div class="col-lg-4 col-md-12 col-sm-12 mb-2">
+			@Html.LabelFor(model => model.Nombre)
+			@Html.TextBoxFor(model => model.Nombre, "", new { @class = "form-control", @placeholder = "Escribe el nombre..."})
+			@Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger"})
+		</div>
+
+		<div class="col-lg-4 col-md-12 col-sm-12 mb-2">
+			@Html.LabelFor(model => model.Descripcion)
+			@Html.TextBoxFor(model => model.Descripcion, "", new { @class = "form-control", @placeholder = "Escribe la descripción..." })
+			@Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
+		</div>
+
+		<div class="float-end col-lg-4 col-md-12 col-sm-12">
+			<button type="submit" class="btn btn-primary">Enviar</button>
+		</div>
+	
+}
+
+
+@section Scripts {
+	@{
+		await Html.RenderPartialAsync("_ValidationScriptsPartial");
+	}
+}
