--- a/Proyecto.Web/Areas/Activos/_ViewImports.cshtml
+++ b/Proyecto.Web/Areas/Activos/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Proyecto.Web
 @using Proyecto.Web.Models
 @using Proyecto.Web.ViewModels
+@using Proyecto.Core.DTOs
+@using Proyecto.Core.Entidades
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
