--- a/Proyecto.Web/wwwroot/css/site.css
+++ b/Proyecto.Web/wwwroot/css/site.css
@@ -1,5 +1,8 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 @media (min-width: 768px) {
